# OOPSELAB1

./: .gitignore  CMakeLists.txt  ChannelTest.cpp  ChannelTest.vcxproj  ChannelTest.vcxproj.filters  README.md
AdcChannel/: AdcChannel.slnx
AdcChannel/AdcChannel/: Adc.h  AdcChannel.cpp  AdcChannel.vcxproj  AdcChannel.vcxproj.filters  Channel.cpp  Channel.h
AdcChannel/AdcChannel/x64/Debug/: AdcChannel.exe.recipe  AdcChannel.ilk  vc145.idb
AdcChannel/AdcChannel/x64/Debug/AdcChannel.tlog/: AdcChannel.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ChannelTest/Debug/: vc145.idb
ChannelTest/Debug/ChannelTest.tlog/: ChannelTest.lastbuildstate
OOPSE_lab/: Adc.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelTest.cpp
